@@ -6,6 +6,9 @@ use English qw(-no_match_vars);
 use Test::More 'tests' => 3;
 use Test::NoWarnings;
 
+# Default Error::Pure module to use.
+$ENV{'ERROR_PURE_TYPE'} = 'AllError';
+
 # Test.
 my $self = {
 	'key' => undef,
